--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "delta-142",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "description": "Nothing",
   "main": "bot.js",
   "scripts": {
@@ -9,17 +9,17 @@
   "author": "Manana",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^13.2.0",
-    "dotenv": "^10.0.0",
-    "firebase": "^9.1.2",
-    "firebase-admin": "^9.12.0",
-    "fs": "0.0.1-security",
-    "mongoose": "^6.0.11",
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
+    "discord-api-types": "^0.26.1",
+    "discord.js": "^13.6.0",
+    "dotenv": "^15.0.0",
+    "fs": "^0.0.1-security",
+    "mongoose": "^6.1.7",
     "ms": "^2.1.3",
-    "quick.db": "^7.1.3",
-    "util": "^0.12.4"
+    "quick.db": "^7.1.3"
   },
   "engines": {
-    "node": "16.7.0"
+    "node": "16.13.1"
   }
 }
